First really commint

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
+#############
+## My Project
+#############
+Image
+Unity Source/Library/*
+Unity Source/obj/*
+*.csproj
+*.sln
+*.pidb
+*.userprefs
+
+
+
+
+
 #################
 ## Eclipse
 #################
@@ -161,3 +176,8 @@ pip-log.txt
 
 # Mac crap
 .DS_Store
+
+
+
+
+
